--- a/projects/crud/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.html
@@ -1,5 +1,4 @@
-
-    <mat-form-field [formGroup]="formGroup" style="width: 90%;">
-        <mat-label class="fileContainer">{{ config.label }}</mat-label>
-        <input type="file" id="file" [formControlName]="config.name"/>
-    </mat-form-field>
+<mat-form-field [formGroup]="formGroup">
+    <mat-label class="fileContainer">{{ config.label }}</mat-label>
+    <input type="file" id="file" [formControlName]="config.name" />
+</mat-form-field>
