--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -14,6 +14,7 @@
 }
 .crud-search{
     border:1px solid #D3D6DD;
+    background-color: #1490C0;
 }
 .bulk_container{
     display: flex;
@@ -72,7 +73,7 @@ mat-panel-title{
         font-size: 16;
     }
     .crud-views-button{
-        margin-right: 50px;   
+        margin-right: 50px;
     }
     .crud-new-btn{
         margin-left: 50px;
