--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -27,7 +27,7 @@
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
                                 <ng-container *ngFor="let config2 of config.control.fields">
-                                    <div *ngIf="config.isEditable" style="width:47%;display:inline-block; box-sizing: border-box;">
+                                    <div *ngIf="config2.isEditable" style="width:47%;display:inline-block; box-sizing: border-box;">
                                         <ng-crud-form-field class="FormCell" [reset]="submit" [formGroup]="formGroup" [config]="config2"></ng-crud-form-field>
                                     </div>
                                 </ng-container>
