--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -16,6 +16,10 @@
     border:1px solid #D3D6DD;
     background-color: #1490C0;
 }
+::ng-deep {
+    .crud-search .mat-expansion-panel-body{display: block;}
+    .crud-search .mat-expansion-panel-body .FormCell{margin-right: .5rem;}
+}
 .bulk_container{
     display: flex;
     flex-direction: row-reverse;
