--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -38,11 +38,12 @@
 }
 
 .FormCell {
-    width: 24%;
+    width: 20%;
 }
 
 mat-header-cell {
-    background-color: #EEEEEE;
+    background-color: #CECECE;
+    color: #231F20;
 }
 
 mat-expansion-panel {
