--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -15,7 +15,7 @@
             </a>
         </div>
 
-        <div fxflexfill fxlayoutgap="10px grid" style="cursor: pointer;height: 100%;min-height: 100%;min-width: 100%;width: 100%;flex-flow: row wrap;box-sizing: border-box;display: flex;margin: 0px -10px -10px 0px;" class="row full" [formGroup]="formGroup">
+        <div fxflexfill fxlayoutgap="10px grid" style="height: 100%;min-height: 100%;min-width: 100%;width: 100%;flex-flow: row wrap;box-sizing: border-box;display: flex;" class="row full" [formGroup]="formGroup">
             <ng-container *ngFor="let config of _visibleControls">
                 <ng-container *ngIf="config.type === 'fieldset'">
                     <div class="field-wrapper" [style.max-width.%]="config.cssWidth" [style.flex.%]="config.cssWidth" style="margin: 4px;">
@@ -49,7 +49,7 @@
                             </mat-expansion-panel-header>
                             <ng-container *ngFor="let config of formsets; let i=index">
                                 <div class="formset_container">
-                                    <ng-crud-formset  [config]="config" [formGroup]="formGroup"></ng-crud-formset>
+                                    <ng-crud-formset [config]="config" [formGroup]="formGroup"></ng-crud-formset>
                                 </div>
                             </ng-container>
                         </mat-expansion-panel>
