Fix Search input width & align search elements vertically

--- a/projects/crud/src/lib/components/formset/formset.component.html
+++ b/projects/crud/src/lib/components/formset/formset.component.html
@@ -16,7 +16,7 @@
                         </ng-container>
                     </ng-container>
                 </div>
-                <div *ngIf="i<1" class="delete_btn" style="visibility: hidden;">
+                <div *ngIf="i==0" class="delete_btn" style="visibility: hidden;">
                     <a color="warn" (click)="delete(i)">Delete</a>
                 </div>
                 <div *ngIf="i>=1" class="delete_btn">
