--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -19,9 +19,13 @@
 ::ng-deep {
     .crud-search .mat-expansion-panel-body{display: block;}
     .crud-search .mat-expansion-panel-body .FormCell{
-        padding: 0 .5rem;
+        padding: 0 10px;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
+    }
+    .crud-search .mat-form-field
+    {
+        border-right: 0;
     }
 }
 .bulk_container{
