--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -13,7 +13,7 @@
 }
 
 .reset_btn {
-    padding: 0;
+    padding: 0 10px;
     margin: 0;
     width: 100%;
     display: flex;
@@ -38,7 +38,7 @@
 }
 
 .FormCell {
-    width: 20%;
+    width: 25%;
 }
 
 mat-header-cell {
