--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -106,6 +106,10 @@ mat-panel-title {
     }
 }
 
+.my-class {
+    background-color: red;
+}
+
 .save {
     background-color: #5AB857;
     color: #fff;
