--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -41,6 +41,19 @@
     width: 25%;
 }
 
+::ng-deep{
+    .my-class
+    {
+        width: 25%;
+    }
+    .my-class .mat-form-field
+    {
+        width: 100%;
+        padding: 0 10px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+}
 mat-header-cell {
     background-color: #CECECE;
     color: #231F20;
@@ -106,9 +119,6 @@ mat-panel-title {
     }
 }
 
-.my-class {
-    background-color: red;
-}
 
 .save {
     background-color: #5AB857;
