--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -36,10 +36,14 @@
                     </div>
                 </ng-container>
                 <ng-container *ngIf="config.type !== 'fieldset' && config.type !== 'formset' && config.isEditable">
-                    <div [ngClass]="{'my-class': mode !== 'search'}">
+                    <div *ngIf="mode==='edit' || mode==='create';else search" class="crud_edit_fields">
                         <ng-crud-form-field class="FormCell" [mode]="mode" [reset]="submit" [formGroup]="formGroup" [config]="config">
                         </ng-crud-form-field>
                     </div>
+                    <ng-template #search>
+                        <ng-crud-form-field class="FormCell" [mode]="mode" [reset]="submit" [formGroup]="formGroup" [config]="config">
+                        </ng-crud-form-field>
+                    </ng-template>
                 </ng-container>
                 <ng-container *ngIf="config.type === 'formset'">
                     <mat-accordion style="width: 100%; margin: 10px;">
