--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -35,6 +35,13 @@
 
 .full {
     width: 100%;
+    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    width: 100%;
+    flex-flow: row wrap;
+    box-sizing: border-box;
+    display: flex;
 }
 
 .FormCell {
@@ -49,6 +56,9 @@
             padding: 0 10px;
             box-sizing: border-box;
             -webkit-box-sizing: border-box;
+        }
+        .checkbox-container{
+            padding: 0 10px;
         }
     }
 }
@@ -114,7 +124,11 @@ mat-panel-title {
         flex-wrap: wrap;
         justify-content: space-between;
         background-color: #fff;
-        padding-top: 10px !important
+        padding-top: 10px ;
+    }
+    .crud-form-body
+    {
+        padding: 10px 24px 16px;
     }
 }
 
