--- a/projects/crud/src/lib/components/error-handling/error-handling.component.html
+++ b/projects/crud/src/lib/components/error-handling/error-handling.component.html
@@ -1,14 +1,22 @@
 <div class="err-container" *ngIf="hasErr">
-  <div fxlayoutgap="10px grid" fxflexfill>
-    <ng-container *ngFor="let err of strErrors">
-      <div fxflex="25" style="padding: 6px 10px 6px 6px;
+    <div fxlayoutgap="10px grid" fxflexfill>
+        <ng-container *ngFor="let err of strErrors">
+            <div fxflex="25" style="padding: 6px 10px 6px 6px;
                       flex: 1 1 25%;
                       box-sizing: border-box;">
-        <div class="one"
-          style="height: 100%; min-height: 100%; min-width: 100%;font-size:15px; width: 100%; align-items: flex-start; flex-direction: row; box-sizing: border-box; display: flex;">
-          {{ err}}
-        </div>
-      </div>
-    </ng-container>
-  </div>
+                <div class="one" style="height: 100%; min-height: 100%; min-width: 100%;font-size:15px; width: 100%; align-items: flex-start; flex-direction: row; box-sizing: border-box; display: flex;">
+                    {{ err}}
+                </div>
+            </div>
+        </ng-container>
+        <ng-container *ngFor="let err of errors">
+            <div fxflex="25" style="padding: 6px 10px 6px 6px;
+                      flex: 1 1 25%;
+                      box-sizing: border-box;">
+                <div class="one" style="height: 100%; min-height: 100%; min-width: 100%;font-size:15px; width: 100%; align-items: flex-start; flex-direction: row; box-sizing: border-box; display: flex;">
+                    {{ err.key}} : {{err.value}}
+                </div>
+            </div>
+        </ng-container>
+    </div>
 </div>
